Resolves: fdo#76581 copy-and-paste -> slideshow crash in presenter console

crash started after...

commit 0218b0e2fa510d7acd7413dbedefd9ad50257f76
Date:   Mon Jul 15 19:45:44 2013 +0300
    fdo#65457 -  Provide visual clues in presenter view.

Change-Id: I19d84800bd5924f2dcc9e5debcf18ef95577105c
(cherry picked from commit 9b3410961e52b4666a118158512e050462711fd0)
Reviewed-on: https://gerrit.libreoffice.org/12283
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>